tests/it/wire/snapshots/it__wire__openai_responses__drops_model_internal_tool_calls.snap
---
source: tests/it/wire/openai_responses.rs
expression: rendered
---
{
  "id": "resp_internal",
  "model": {
    "provider": "openai",
    "model": "gpt-5.6-luna"
  },
  "content": [
    {
      "type": "text",
      "text": "All done."
    },
    {
      "type": "opaque",
      "kind": "openai.message",
      "data": {
        "type": "message",
        "id": "msg_internal",
        "status": "completed",
        "role": "assistant",
        "content": [
          {
            "type": "output_text",
            "text": "All done.",
            "annotations": []
          }
        ]
      }
    }
  ],
  "finish_reason": "stop",
  "usage": {
    "input": 0,
    "output": 0,
    "reasoning": 0,
    "cache_read": 0,
    "cache_write": 0
  },
  "raw": {
    "id": "resp_internal",
    "object": "response",
    "status": "completed",
    "model": "gpt-5.6-luna-2026-04-01",
    "output": [
      {
        "type": "function_call",
        "id": "fc_internal",
        "call_id": "call_internal",
        "name": "",
        "arguments": "{}",
        "status": "completed"
      },
      {
        "type": "message",
        "id": "msg_internal",
        "status": "completed",
        "role": "assistant",
        "content": [
          {
            "type": "output_text",
            "text": "All done.",
            "annotations": []
          }
        ]
      }
    ]
  }
}
