tests/it/wire/snapshots/it__wire__openai_responses__drops_replayed_reasoning_text_and_warns.snap
---
source: tests/it/wire/openai_responses.rs
expression: rendered
---
{
  "method": "POST",
  "path": "/v1/responses",
  "headers": [
    [
      "accept",
      "*/*"
    ],
    [
      "authorization",
      "[redacted]"
    ],
    [
      "content-length",
      "372"
    ],
    [
      "content-type",
      "application/json"
    ],
    [
      "host",
      "[host]"
    ],
    [
      "user-agent",
      "[user-agent]"
    ]
  ],
  "body": {
    "include": [
      "reasoning.encrypted_content"
    ],
    "input": [
      {
        "content": [
          {
            "text": "Is 91 prime?",
            "type": "input_text"
          }
        ],
        "role": "user"
      },
      {
        "content": [
          {
            "text": "No, 91 is not prime.",
            "type": "output_text"
          }
        ],
        "role": "assistant"
      },
      {
        "content": [
          {
            "text": "What about 97?",
            "type": "input_text"
          }
        ],
        "role": "user"
      }
    ],
    "max_output_tokens": 128,
    "model": "gpt-5.6-luna-2026-04-01",
    "store": false,
    "stream": false
  }
}
