tests/it/wire/snapshots/it__wire__openai_responses__encodes_a_json_object_response_format.snap
---
source: tests/it/wire/openai_responses.rs
expression: rendered
---
{
  "method": "POST",
  "path": "/v1/responses",
  "headers": [
    [
      "accept",
      "*/*"
    ],
    [
      "authorization",
      "[redacted]"
    ],
    [
      "content-length",
      "277"
    ],
    [
      "content-type",
      "application/json"
    ],
    [
      "host",
      "[host]"
    ],
    [
      "user-agent",
      "[user-agent]"
    ]
  ],
  "body": {
    "model": "gpt-5.6-luna-2026-04-01",
    "input": [
      {
        "role": "user",
        "content": [
          {
            "type": "input_text",
            "text": "Give me the city and its population."
          }
        ]
      }
    ],
    "stream": false,
    "store": false,
    "include": [
      "reasoning.encrypted_content"
    ],
    "max_output_tokens": 128,
    "text": {
      "format": {
        "type": "json_object"
      }
    }
  }
}
