tests/it/wire/snapshots/it__wire__openai_responses__encodes_a_json_schema_response_format.snap
---
source: tests/it/wire/openai_responses.rs
expression: rendered
---
{
  "body": {
    "include": [
      "reasoning.encrypted_content"
    ],
    "input": [
      {
        "content": [
          {
            "text": "Give me the city and its population.",
            "type": "input_text"
          }
        ],
        "role": "user"
      }
    ],
    "max_output_tokens": 128,
    "model": "gpt-5.6-luna-2026-04-01",
    "store": false,
    "stream": false,
    "text": {
      "format": {
        "name": "city_report",
        "schema": {
          "additionalProperties": false,
          "properties": {
            "city": {
              "type": "string"
            },
            "population": {
              "type": "integer"
            }
          },
          "required": [
            "city",
            "population"
          ],
          "type": "object"
        },
        "strict": true,
        "type": "json_schema"
      }
    }
  },
  "headers": [
    [
      "accept",
      "*/*"
    ],
    [
      "authorization",
      "[redacted]"
    ],
    [
      "content-length",
      "473"
    ],
    [
      "content-type",
      "application/json"
    ],
    [
      "host",
      "[host]"
    ],
    [
      "user-agent",
      "[user-agent]"
    ]
  ],
  "method": "POST",
  "path": "/v1/responses"
}
