tests/it/wire/snapshots/it__wire__openai_responses__encodes_a_tool_round_trip-2.snap
---
source: tests/it/wire/openai_responses.rs
expression: rendered
---
{
  "id": "resp_text",
  "model": {
    "provider": "openai",
    "model": "gpt-5.6-luna"
  },
  "content": [
    {
      "type": "text",
      "text": "Hello there."
    }
  ],
  "finish_reason": "stop",
  "usage": {
    "input": 12,
    "output": 4,
    "reasoning": 0,
    "cache_read": 0,
    "cache_write": 0
  },
  "raw": {
    "created_at": 1772000000,
    "id": "resp_text",
    "model": "gpt-5.6-luna-2026-04-01",
    "object": "response",
    "output": [
      {
        "content": [
          {
            "annotations": [],
            "text": "Hello there.",
            "type": "output_text"
          }
        ],
        "id": "msg_text",
        "role": "assistant",
        "status": "completed",
        "type": "message"
      }
    ],
    "status": "completed",
    "usage": {
      "input_tokens": 12,
      "input_tokens_details": {
        "cached_tokens": 0
      },
      "output_tokens": 4,
      "output_tokens_details": {
        "reasoning_tokens": 0
      },
      "total_tokens": 16
    }
  }
}
