tests/it/wire/snapshots/it__wire__openai_responses__encodes_and_decodes_a_custom_tool_round_trip.snap
---
source: tests/it/wire/openai_responses.rs
expression: rendered
---
{
  "body": {
    "include": [
      "reasoning.encrypted_content"
    ],
    "input": [
      {
        "content": [
          {
            "text": "Apply the patch.",
            "type": "input_text"
          }
        ],
        "role": "user"
      },
      {
        "call_id": "call_patch",
        "input": "*** Begin Patch\n*** End Patch",
        "name": "apply_patch",
        "type": "custom_tool_call"
      },
      {
        "call_id": "call_patch",
        "output": "applied",
        "type": "custom_tool_call_output"
      }
    ],
    "max_output_tokens": 128,
    "model": "gpt-5.6-luna-2026-04-01",
    "store": false,
    "stream": false,
    "tools": [
      {
        "description": "Applies a unified patch to the working tree",
        "format": {
          "definition": "start: TEXT",
          "syntax": "lark",
          "type": "grammar"
        },
        "name": "apply_patch",
        "type": "custom"
      }
    ]
  },
  "headers": [
    [
      "accept",
      "*/*"
    ],
    [
      "authorization",
      "[redacted]"
    ],
    [
      "content-length",
      "586"
    ],
    [
      "content-type",
      "application/json"
    ],
    [
      "host",
      "[host]"
    ],
    [
      "user-agent",
      "[user-agent]"
    ]
  ],
  "method": "POST",
  "path": "/v1/responses"
}
