tests/it/wire/snapshots/it__wire__openai_responses__encodes_inline_attachments.snap
---
source: tests/it/wire/openai_responses.rs
expression: rendered
---
{
  "body": {
    "include": [
      "reasoning.encrypted_content"
    ],
    "input": [
      {
        "content": [
          {
            "text": "Describe both attachments.",
            "type": "input_text"
          },
          {
            "image_url": "data:image/png;base64,aW1hZ2UtYnl0ZXM=",
            "type": "input_image"
          },
          {
            "file_data": "data:application/pdf;base64,cGRmLWJ5dGVz",
            "filename": "report.pdf",
            "type": "input_file"
          }
        ],
        "role": "user"
      }
    ],
    "max_output_tokens": 128,
    "model": "gpt-5.6-luna-2026-04-01",
    "store": false,
    "stream": false
  },
  "headers": [
    [
      "accept",
      "*/*"
    ],
    [
      "authorization",
      "[redacted]"
    ],
    [
      "content-length",
      "403"
    ],
    [
      "content-type",
      "application/json"
    ],
    [
      "host",
      "[host]"
    ],
    [
      "user-agent",
      "[user-agent]"
    ]
  ],
  "method": "POST",
  "path": "/v1/responses"
}
